--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.16",
+    "@vercel/analytics": "^1.5.0",
     "axios": "^1.13.1",
     "date-fns": "^4.1.0",
     "react": "^19.1.1",
